# repo2docs

./: .cursorrules  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  console.py  main.py
tests/: __init__.py  test_console.py
